# dwarf-torture

./: CMakeLists.txt  README.md  setpaths.bash
hello-world/: CMakeLists.txt
tests/: CMakeLists.txt  deep_recursion.c  float_qsort.c  hello_world.c  many_locals.c  nested_structs.c  timer_irq.c
